--- a/index.html
+++ b/index.html
@@ -37,35 +37,29 @@
     <div class="slideshow-container">
 
         <div class="mySlides fade">
-            <img class="slideshowImage" src="assets/slideshow image 1.jpeg">
+            <img class="slideshowImage" src="assets/slideshow image 1.jpg">
         </div>
 
         <div class="mySlides fade">
-            <img class="slideshowImage" src="assets/slideshow image 2.JPG">
+            <img class="slideshowImage" src="assets/slideshow image 2.jpg">
         </div>
 
         <div class="mySlides fade">
-            <img class="slideshowImage" src="assets/slideshow image 3.JPG">
+            <img class="slideshowImage" src="assets/slideshow image 3.jpg">
         </div>
 
         <div class="mySlides fade">
-            <img class="slideshowImage" src="assets/slideshow image 4.JPG">
+            <img class="slideshowImage" src="assets/slideshow image 4.jpg">
         </div>
 
         <div class="mySlides fade">
-            <img class="slideshowImage" src="assets/slideshow image 5.JPG">
+            <img class="slideshowImage" src="assets/slideshow image 5.jpg">
         </div>
-
-        <div class="mySlides fade">
-            <img class="slideshowImage" src="assets/slideshow image 6.JPG">
-        </div>
-
 
     </div>
 
 
     <div style="text-align:center">
-        <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
@@ -96,9 +90,11 @@
 
     <br>
 
-    <div class="Book_Table_Btn">
-        <p><b>Book A Table</b></p>
-    </div>
+    <a href="tableReservation.html">
+        <div class="Book_Table_Btn">
+            <p><b>Book A Table</b></p>
+        </div>
+    </a>
     <div class="marginDiv"></div>
     <a href="menu.html">
         <div class="Menu_Btn">
